src/features/ProductsCarousel/ProductsCarousel.scss
@import "/src/sass/colors.scss";
@import "/src/sass/mixins.scss";
@import "/src//sass/variables.scss";

.carousel {
  height: 220px;
  display: flex;
  justify-content: center;
  position: relative;

  .carousel-item {
    width: 160px;
    display: flex;
    flex-direction: column;
    cursor: pointer;

    .carousel-image {
      height: 140px;
      display: flex;
      align-items: center;
      justify-content: center;

      img {
        max-width: 105px;
        padding: 10px 0;
      }
    }

    .carousel-product-title {
      width: 160px;
      height: 19px;
      margin-top: 12px;
      font-size: $font-size-14px;
      text-align: start;
      text-overflow: ellipsis;
      color: $secondary-link-text-color;
      overflow: hidden;
      white-space: nowrap;
    }

    .carousel-product-title:hover {
      color: #e47911;
      text-decoration: none;
    }

    .carousel-item-rating {
      display: flex;
      align-items: center;
      margin-top: 10px;

      span {
        margin-left: 5px;
        font-size: $font-size-14px;
        color: $secondary-link-text-color;
      }

      img {
        width: 75px;
        padding-bottom: 1px;
      }
    }

    .carousel-item-price {
      margin-top: 5px;
      font-size: $font-size-18px;
      font-weight: normal;
      color: #b12704;
    }
  }

  .right-arrow-button {
    position: absolute;
    top: 0;
    right: 0;
  }

  .left-arrow-button {
    position: absolute;
    top: 0;
    left: 0;
  }
}

